# MarkOS_communication

./: CMakeLists.txt  README.md
src/: Message.cpp  Message.h  Receiver.cpp  Receiver.h  SequenceAwareReceiver.h  SequenceAwareTransciever.cpp  SequenceAwareTransciever.h  Transceiver.cpp  Transceiver.h  TransceiverWithRetries.cpp  TransceiverWithRetries.h
test/: CMakeLists.txt  SequenceAwareRecieverTest.cpp  SequenceAwareRecieverTest.h  SequenceAwareTransceiverTest.cpp  SequenceAwareTransceiverTest.h  TransceiverWithRetriesTest.cpp  TransceiverWithRetriesTest.h  main.cpp
